added flower & plants lover section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>flower market</title>
     <link rel="stylesheet" href="styles/flower-market.css">
 </head>
-<body>
+<body class="noto-serif-font">
     <header>
         <nav class="top-bar">
         <nav class="logo"><img src="assets/logo.png" alt=""></nav>
@@ -25,9 +25,94 @@
 
         </nav>
 
+        <div class="banner">
+            <div class="banner-text">
+            <h1>Always <span class="color">Fresh<br> Flowers</span></h1>
+            <p class="lite-gray">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+        </div>
+            <div><img src="assets/hero-flower.png" alt=""></div>
+        </div>
+
     </header>
 
     <main>
+        <section class="flower-collection">
+            <div class="section-header">
+            <h1><span class="color">Our</span> Plants</h1>
+            <p class="lite-gray">Explore our collection of beautiful plants that bring life to your space. From <br>indoor greenery to outdoor blooms, we have the perfect plants for every plant lover.</p>
+            </div>
+            <div class="flower-items">
+                <div class="flower-item">
+                    <img src="assets/sample-flower-image.png" alt="Flower 1">
+                    <h3>Lily Blossom</h3>
+                    <p>$25.00</p>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+                <div class="flower-item">
+                    <img src="assets/sample-flower-image.png" alt="Flower 1">
+                    <h3>Lily Blossom</h3>
+                    <p>$25.00</p>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+                <div class="flower-item">
+                    <img src="assets/sample-flower-image.png" alt="Flower 1">
+                    <h3>Lily Blossom</h3>
+                    <p>$25.00</p>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+                <div class="flower-item">
+                    <img src="assets/sample-flower-image.png" alt="Flower 1">
+                    <h3>Lily Blossom</h3>
+                    <p>$25.00</p>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+                <div class="flower-item">
+                    <img src="assets/sample-flower-image.png" alt="Flower 1">
+                    <h3>Lily Blossom</h3>
+                    <p>$25.00</p>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+                <div class="flower-item">
+                    <img src="assets/sample-flower-image.png" alt="Flower 1">
+                    <h3>Lily Blossom</h3>
+                    <p>$25.00</p>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+                <div class="flower-item">
+                    <img src="assets/sample-flower-image.png" alt="Flower 1">
+                    <h3>Lily Blossom</h3>
+                    <p>$25.00</p>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+                <div class="flower-item">
+                    <img src="assets/sample-flower-image.png" alt="Flower 1">
+                    <h3>Lily Blossom</h3>
+                    <p>$25.00</p>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+               
+
+                </div>
+            </div>
+        </section>
+
+        <section class="flower-lovers">
+            <img src="assets/flower-store.png" alt="">    
+            <div class="flower-lovers-text">
+                <h2>Flower & Plants <br>Lover</h2>
+                <ul class="flower-lovers-list">
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+
+
+
+
+
+
+        </section>
 
 
     </main>
