added subscribe form

--- a/index.html
+++ b/index.html
@@ -106,18 +106,53 @@
                     <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                 </ul>
             </div>
+        </section>
 
+        <section class="deals">
+            <div>
+                <h1><span class="color">Latest</span> Deals</h1>
+                <p class="lite-gray">Discover our exclusive deals of the day and enjoy amazing discounts on your favorite flowers.<br> Don't miss out on these limited-time offers!</p>
+            </div>
+        </section>
 
-
-
-
+        <section class="deals-items">
+            <div class="deals-ana-bloom">
+                <div class="deal-item-1">
+                    <img src="assets/deal-bloom.png" alt="Deal Flower 1">
+                    <h3>60% Off | Bloom Plant</h3>
+                    <button class="btn-2">Shop Now</button>
+                </div>
+                <div class="deal-item">
+                    <img src="assets/deal-ana.png" alt="Deal Flower 2">
+                    <h3>30% Off | Ana Plant</h3>
+                    <button class="btn-2">Shop Now</button>
+                </div>
+            </div>
+                <div class="deal-item">
+                    <img src="assets/deal-zabo.png" alt="Deal Flower 3">
+                    <h3>25% Off | Zabo Plant</h3>
+                    <button class="btn-2">Shop Now</button>   
+                </div>
 
         </section>
+
+        
+            
 
 
     </main>
 
     <footer>
+        <section class="subscribe">
+            <div class="subscribe-bg">
+            <img src="assets/news-letter-bg.png" alt="Subscribe Background">
+            </div>
+            <form class="subscribe-form">
+                <input type="email" placeholder="write email" required>
+                <button type="submit" class="btn">Subscribe</button>
+            </form>
+        </section>    
+
 
 
     </footer>
