--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles/flower-market.css">
 </head>
 <body class="noto-serif-font">
-    <header>
         <nav class="top-bar">
         <nav class="logo"><img src="assets/logo.png" alt=""></nav>
         <nav class="nav-info">
@@ -97,7 +96,9 @@
         </section>
 
         <section class="flower-lovers">
-            <img src="assets/flower-store.png" alt="">    
+            <img src="assets/flower-store.png" alt="">
+            <img src="assets/trusted-badge.png" alt="" class="trusted-badge">
+            </div>    
             <div class="flower-lovers-text">
                 <h2>Flower & Plants <br>Lover</h2>
                 <ul class="flower-lovers-list">
@@ -118,33 +119,24 @@
         <section class="deals-items">
             <div class="deals-ana-bloom">
                 <div class="deal-item-1">
-                    <img src="assets/deal-bloom.png" alt="Deal Flower 1">
-                    <h3>60% Off | Bloom Plant</h3>
-                    <button class="btn-2">Shop Now</button>
+                    <h3 class="bg-text-1">60% Off | Bloom Plant <br><u>Shop Now</u></h3>  
                 </div>
-                <div class="deal-item">
-                    <img src="assets/deal-ana.png" alt="Deal Flower 2">
-                    <h3>30% Off | Ana Plant</h3>
-                    <button class="btn-2">Shop Now</button>
+                <div class="deal-item-2">
+                    <h3 class="bg-text-1">30% Off | Ana Plant <br><u>Shop Now</u></h3>
                 </div>
             </div>
-                <div class="deal-item">
-                    <img src="assets/deal-zabo.png" alt="Deal Flower 3">
-                    <h3>25% Off | Zabo Plant</h3>
-                    <button class="btn-2">Shop Now</button>   
+                <div class="deal-item-3">
+                    <h3 class="bg-text">25% Off | Zabo Plant <br><u>Shop Now</u></h3>
+                      
                 </div>
 
         </section>
     </main>
 
-    <footer>
-        <section class="subscribe">
-            <div class="subscribe-bg">
-            <img src="assets/news-letter-bg.png" alt="Subscribe Background">
-            </div>
+        <section class="subscribe">  
             <form class="subscribe-form">
                 <h1 class="join">Join the colorful Bunch</h1>
-                <input type="email" placeholder="write email" required>
+                <input type="email" placeholder="write email" class="email" required>
                 <button type="submit" class="btn">Subscribe</button>
             </form>
         </section>
